# zccoin-gpuminer

./: Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac  driver-opencl.c  scrypt.c
